Fixing final name of the generated WAR file

--- a/My-Jersey-Project/pom.xml
+++ b/My-Jersey-Project/pom.xml
@@ -26,7 +26,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
+		<finalName>My-Jersey-Project</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
