--- a/TestNG-Examples/pom.xml
+++ b/TestNG-Examples/pom.xml
@@ -24,6 +24,18 @@
 					<release>10</release>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.21.0</version>
+				<configuration>
+                    <!-- TestNG Suite XML files list for test execution -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                        <suiteXmlFile>src/test/resources/test_parameters.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
