Fixing Spring Session Project - working now. Need to add some UI for testing

--- a/Spring/Spring-Session-Example/src/main/resources/application.properties
+++ b/Spring/Spring-Session-Example/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/SpringSessionDB
-spring.datasource.username=pankaj
-spring.datasource.password=pankaj
+spring.datasource.username=journaldev
+spring.datasource.password=journaldev
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
