--- a/Spring/Spring-Session-Example/pom.xml
+++ b/Spring/Spring-Session-Example/pom.xml
@@ -43,6 +43,10 @@
 			<artifactId>spring-session-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
