--- a/JUnit5-Example/pom.xml
+++ b/JUnit5-Example/pom.xml
@@ -65,6 +65,14 @@
 		</plugins>
 	</build>
 
-
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.22.0</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
