Spring Session JDBC Example

--- a/Spring/Spring-Session-Example/src/main/resources/application.properties
+++ b/Spring/Spring-Session-Example/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=journaldev
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
