--- a/Mockito-Examples/pom.xml
+++ b/Mockito-Examples/pom.xml
@@ -14,7 +14,6 @@
 			<artifactId>junit-platform-runner</artifactId>
 			<version>1.2.0</version>
 			<scope>test</scope>
-			<!--  -->
 			<exclusions>
 				<exclusion>
 					<groupId>junit</groupId>
@@ -32,6 +31,13 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
 			<version>2.19.0</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- TestNG Dependencies -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.14.3</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -54,6 +60,11 @@
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
 						<version>1.2.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-testng</artifactId>
+						<version>2.22.0</version>
 					</dependency>
 				</dependencies>
 				<configuration>
